Update Monte Carlo Simulation.ipynb

--- a/Monte Carlo Simulation.ipynb
+++ b/Monte Carlo Simulation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bachelor 2021"
+    "# Monte Carlo simulations for European Options and Asian Options"
    ]
   },
   {
@@ -72,25 +72,14 @@
     "        \n",
     "        # Gennemsnit af prisen på det underliggende aktiv per simulering\n",
     "        avg = [Geo_Mean_Overflow(S[i,:]) for i in range(len(S))]\n",
-    "#         avg = []\n",
-    "#         for i in range(len(S)):\n",
-    "#             avg.append(Geo_Mean_Overflow(S[i,:]))\n",
     "        \n",
     "        # Beregning af payoff for call\n",
     "        c = [avg[i] - self.K for i in range(len(avg))]\n",
     "        c = [np.maximum(c[i], 0) for i in range(len(avg))]\n",
-    "#         c = []\n",
-    "#         for i in range(len(avg)):\n",
-    "#             c.append(avg[i] - self.K)\n",
-    "#             c[i] = np.maximum(c[i], 0)\n",
     "\n",
     "        # Beregning af payoff for put\n",
     "        p = [self.K - avg[i] for i in range(len(avg))]\n",
     "        p = [np.maximum(p[i], 0) for i in range(len(avg))]\n",
-    "#         p = []\n",
-    "#         for i in range(len(avg)):\n",
-    "#             p.append(self.K - avg[i])\n",
-    "#             p[i] = np.maximum(p[i], 0)\n",
     "\n",
     "        # Gennemsnitligt payoff tilbagediskonteret\n",
     "        payoff_call = np.mean(c)*np.exp(-self.r*self.T)\n",
@@ -181,17 +170,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tjek med Black-Scholes**"
+    "**Check with Black-Scholes**"
    ]
   },
   {
@@ -284,41 +266,6 @@
    "source": [
     "BS_Price_European_Options(S0, K, T, r, sigma)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
